se muestra cambio de dolares en la pantallas principales

--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -158,7 +158,7 @@
             <div class="panel-heading" style="margin-top: 20px;" >
                 Opci&oacute;n <?php echo $cntDP;
         if ($objOpcProg->getEstado() == 'AVAILABLE') { ?>
-                    <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; DISPONIBLE ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
+                    <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; CONFIRMADO ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
         <?php } ?>
                 <div style="float: right;">
                     <a data-toggle="modal" href="#myModal2" onclick="fadeIn('detallePopup');
