--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -142,7 +142,7 @@
                                         <?php echo $objProg->getTitulo(); ?>
                                         
                                        <?php if ($objProg->getEstado() == 'AVAILABLE') { ?>
-                                            <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; DISPONIBLE ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
+                                            <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; CONFIRMADO ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
                                          <?php } ?>
 
                                     </div>
