Cambiando titulo de (notas de opcion de programa) a a(notas del hotel)

--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -181,8 +181,8 @@ if ($this->objOpcBloqueos) {
 
             <?php if ($objOpcProg->getNotaOpc()) { ?>
                                         <a data-toggle="modal" href="#myModal" style="text-decoration:none;" 
-                                           onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloFormPRG', 'Nota de opci&oacute;n de programa', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');">
-                                            <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="20px" alt="Nota de opci&oacute;n de programa" title="Nota de opci&oacute;n de programa" />
+                                           onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/notas', 'tituloFormPRG', 'Notas del Hotel', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $this->form; ?>');">
+                                            <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>nota.png" width="20px" alt="Notas del Hotel" title="Notas del Hotel" />
                                         </a>
             <?php } ?>
 
