--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -231,16 +231,16 @@
                                     <table width="98%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#E8E6E1">
                                         <tr>
                                             <td bordercolor="#FFFFFF">
-                                                <table width="100%" border="0" cellpadding="2" cellspacing="2" class="Base">
+                                                <table width="<?php if($this->CC_objsDetBloq[0]->getCantidadInf()>0) {?> 100% <?php }else{ ?> 50% <?php } ?>" border="0" cellpadding="2" cellspacing="2" class="Base">
                                                     <tr>
                                                         <th></th>
                                                         <th>Tipo</th>
                                                         <th>Nombre</th>
-                                                        <th>Rut</th>
+                                                        <th>Rut/Pasaporte</th>
                                                         <th>Fecha nacimiento</th>
-                                                        <th>Nombre Infant</th>
-                                                        <th>Rut Infant</th>
-                                                        <th>Fecha nacimiento Infant</th>
+                                                        <th><?php if($this->CC_objsDetBloq[0]->getCantidadInf()>0) {?>Nombre Infant <?php } ?></th>
+                                                        <th><?php if($this->CC_objsDetBloq[0]->getCantidadInf()>0) {?>Rut Infant <?php } ?></th>
+                                                        <th><?php if($this->CC_objsDetBloq[0]->getCantidadInf()>0) {?>Fecha nacimiento Infant <?php } ?></th>
                                                     </tr>
                                                     <?php
                                                     $contador = 1; 
