--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -65,26 +65,6 @@ if ($this->objOpcBloqueos) {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                         <?php
                         $OP_hoteles = $objOpcProg->getHoteles();
                         $OP_codHoteles = $objOpcProg->getCodHoteles();
@@ -222,8 +202,10 @@ if ($this->objOpcBloqueos) {
                                         $TotalPago = ($OP_valores[0] + $OP_valores[1] + $OP_valores[2]);
                                         echo Functions::formatoValor($objOpcProg->getMoneda(), ($OP_valores[0] + $OP_valores[1] + $OP_valores[2])); 
                                         if($objOpcProg->getMoneda()=='D'){?>
-                                            <div style="font-size:12px;">(
+                                            <?php if(Session::get('sess_codigo_cliente_url')=='3f7a2611ee08c6645796463e0bb1ae7f'){ ?>
+                                            <div style="font-size:11px; color: #033d7d;">(
                                                 <?php echo Functions::formatoValor('P',$TotalPago * Session::get('sess_tcambio')); ?>)</div>
+                                            <?php } ?>
                                         <?php } ?>
                                         </span>
                                     </td>
