--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -25,7 +25,7 @@
                                                 <strong class="TopBot">
                                                     Travel Club</strong><br />
                                                 Av. Apoquindo #5555, piso 4, Las Condes<br />
-                                                Tel&eacute;fonos : 600 300 9000<br /><br />	      
+                                                ventaonline@travelclub.cl<br /><br />	      
                                                 <a href="http://www.travelclub.cl/" target="_blank"> http://www.travelclub.cl/ <br /></a>
                                                 <br />
                                                 Santiago,<?php echo Functions::convertirFechaCarta($this->CC_fecha);?>
@@ -85,7 +85,7 @@
                                     </table>
                                     <br />
                                     
-                                    <center><h3><u><b><font face="calibri"><a href="<?php echo BASE_URL;?>booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Voucher </a></font></b></u></h3></center>
+                                    <center><h3><u><b><font face="calibri"><a href="<?php echo BASE_URL;?>booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Vouchers </a></font></b></u></h3></center>
                                         <hr noshade="noshade" />                                       </tr>
                                    
 
