--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -95,7 +95,7 @@
 </div>-->
 
 
-<?php if ($this->pago) { ?>
+<?php if (!$this->pago) { ?>
         <table class=" table table-bordered">
             <tr style="color: #fff; background-color: #34495e; border-color: #2bbce0;">
                 <td colspan="4" align="center" style="padding:2px;">Datos de la Persona que efectúa la Reserva</td>
