--- a/views/pago/fracaso.phtml
+++ b/views/pago/fracaso.phtml
@@ -14,7 +14,7 @@
                 <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
                 <br>
                 <img src="<?php echo $_layoutParams['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
-                <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club - ventasonline@travelclub.cl </h4>
+                <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club - ventaonline@travelclub.cl </h4>
                 <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
             </div>
 
