--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -148,7 +148,7 @@ if (Session::get('sess_iframe')) {
                                                         }
                                                         ?>"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getPrecioDesde()); ?></b> <br>
                                                         
-                                                        <?php if(Session::get('sess_codigo_cliente_url')=='3f7a2611ee08c6645796463e0bb1ae7f' && $objProg->getMoneda()=='P'){ ?>
+                                                        <?php if(Session::get('sess_codigo_cliente_url')=='3f7a2611ee08c6645796463e0bb1ae7f' && $objProg->getMoneda()=='D'){ ?>
                                                         <div style="font-size:11px; color: #F00;">(
                                                         <?php echo Functions::formatoValor('P',$objProg->getPrecioDesde() * Session::get('sess_tcambio')); ?>)</div>
                                                         <?php } ?>
