--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -202,7 +202,7 @@ if ($this->objOpcBloqueos) {
                                         $TotalPago = ($OP_valores[0] + $OP_valores[1] + $OP_valores[2]);
                                         echo Functions::formatoValor($objOpcProg->getMoneda(), ($OP_valores[0] + $OP_valores[1] + $OP_valores[2])); 
                                         if($objOpcProg->getMoneda()=='D'){?>
-                                            <?php if(Session::get('sess_codigo_cliente_url')=='3f7a2611ee08c6645796463e0bb1ae7f' && $objOpcProg->getMoneda()=='P'){ ?>
+                                            <?php if(Session::get('sess_codigo_cliente_url')=='3f7a2611ee08c6645796463e0bb1ae7f' && $objOpcProg->getMoneda()=='D'){ ?>
                                             <div style="font-size:11px; color: #033d7d;">(
                                                 <?php echo Functions::formatoValor('P',$TotalPago * Session::get('sess_tcambio')); ?>)</div>
                                             <?php } ?>
@@ -211,10 +211,10 @@ if ($this->objOpcBloqueos) {
                                     </td>
                                     <td class="<?php echo $td_background; ?>" rowspan="<?php echo $OP_cntHoteles; ?>" style=" vertical-align: middle; padding: 2px;">
                                         <a data-toggle="modal"  <?php
-                        if ($this->form === 'a' || Session::get('sess_boton_pago') || Session::get('Autenticado')) {
-                            echo'href="#myModal"';
-                        }
-                        ?> 
+                                        if ($this->form === 'a' || Session::get('sess_boton_pago') || Session::get('Autenticado')) {
+                                            echo'href="#myModal"';
+                                        }
+                                        ?>
                                            onClick="openForm('divPopupPRG', '<?php echo BASE_URL; ?>bloqueos/reservaPrograma', 'tituloFormPRG', 'Formulario de reserva', '<?php echo $objOpcProg->getIdOpc(); ?>', '<?php echo $objOpcProg->getId(); ?>', '<?php echo $this->form; ?>');"
                                            class="btn btn-primary resBloque btn-xs">Reservar</a>
                                     </td>
