Agregando link de registro en login

--- a/views/login/login.phtml
+++ b/views/login/login.phtml
@@ -57,7 +57,7 @@
                     </div>
             </div>
             <div class="panel-footer">
-                <!-- <a href="<?php echo BASE_URL . 'login/cambioPass'; ?>" class="pull-left btn btn-link" style="padding-left:0">&iquest;Olvido su contrase&ntilde;a?</a> -->
+                <a href="http://www.panamericanaturismo.cl/newsite/Registro-Online/" target="_blank" class="pull-left btn btn-link" style="padding-left:0">Reg&iacute;strese aqu&iacute;</a>
 
                 <div class="pull-right">
                     <a href="#" class="btn btn-default" onclick="$('#password').val('')">Limpiar</a>
