se camabian textos

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -23,12 +23,12 @@
                                             </td>
                                             <td width="50%" align="right" class="TopBot">
                                                 <strong class="TopBot">
-                                                    Travel Club</strong><br />
+                                                Travel Club</strong><br />
                                                 Av. Apoquindo #5555, piso 4, Las Condes<br />
                                                 ventaonline@travelclub.cl<br /><br />	      
                                                 <a href="http://www.travelclub.cl/" target="_blank"> http://www.travelclub.cl/ <br /></a>
                                                 <br />
-                                                Santiago,<?php echo Functions::convertirFechaCarta($this->CC_fecha);?>
+                                                Santiago, <?php echo Functions::convertirFechaCarta($this->CC_fecha);?>
                                             </td>
 
 
@@ -48,7 +48,7 @@
                                         </tr>
 
                                         <tr>
-                                            <td width="18%"><strong>Nombre Pasajero</strong></td>
+                                            <td width="18%"><strong>Nombre Pagador</strong></td>
                                             <td width="2%">:</td>
                                             <td width="80%"><?php  echo str_replace('/', ' ', $this->CC_nomPax);?></td>
                                         </tr>
