Se agrega limite de caracteres a 15 para el infant

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -292,10 +292,10 @@ if (Session::get('sess_BP_cntInf') > 0) {
                                name="rP_txtRutInf_<?php echo $i; ?>" style="width:80px;">
                     </td>
                     <td>
-                        <input type="text" id="rP_txtNomInf_<?php echo $i; ?>" name="rP_txtNomInf_<?php echo $i; ?>" style="width:100px;">
+                        <input type="text" id="rP_txtNomInf_<?php echo $i; ?>" name="rP_txtNomInf_<?php echo $i; ?>" maxlength="15" style="width:100px;">
                     </td>
                     <td>
-                        <input type="text" id="rP_txtApeInf_<?php echo $i; ?>" name="rP_txtApeInf_<?php echo $i; ?>" style="width:100px;">
+                        <input type="text" id="rP_txtApeInf_<?php echo $i; ?>" name="rP_txtApeInf_<?php echo $i; ?>" maxlength="15" style="width:100px;">
                     </td>
                     <td>
                         <script type="text/javascript">
