Validando que no se repita ningun rut en el formulario

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -322,7 +322,7 @@ if (Session::get('sess_BP_cntInf') > 0) {
                                 });
                             });
                         </script>
-                        <input type="text" id="rP_FechaNacInf_<?php echo $i; ?>" name="rP_FechaNacInf_<?php echo $i; ?>" style="width:90px;">
+                        <input type="text" id="rP_FechaNacInf_<?php echo $i; ?>" name="rP_FechaNacInf_<?php echo $i; ?>" style="width:90px;" readonly="readonly">
                     </td>
                 </tr>
             <?php
