se agrega precio en la impresion se cambia imagen de travel y se valida el rut caracter especiales

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -43,11 +43,11 @@ if (Session::get('sess_iframe')) {
     <div id='wrap'>
         <div id="page-heading">
             <ol class="breadcrumb">
-                <li><a href="<?php
+                <!--<li><a href="<?php
                     if ($this->form == '') {
                         echo BASE_URL . 'system';
                     }
-                    ?>">Inicio</a></li>
+                    ?>">Inicio</a></li>-->
                 <li class="active">Busqueda de bloqueos</li>
             </ol>
             <h3 style="margin-left: 18px;">PROGRAMAS CON AEREO CONFIRMADO A <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
